# DawnCord

./: .gitignore  LICENSE  README.md  start-companion.bat
.github/workflows/: build.yml
companion/: auth.py  discord_bridge.py  gui.py  main.py  paths.py  protocol.py  requirements.txt  vita_server.py  voice.py
test-client/: integration_test.py  test_client.py
tools/: crash_symbols.py  make_livearea.py
vita-client/: CMakeLists.txt
vita-client/include/: b64.h  config.h  ime.h  imgcache.h  network.h  protocol.h  state.h  ui.h  voice.h
vita-client/src/: b64.c  config.c  ime.c  imgcache.c  main.c  network.c  protocol.c  state.c  ui.c  voice.c
vita-client/test/: config_test.c  state_test.c
